@@ -18,6 +18,11 @@ Meliae 0.2.2
   simplejson is still recommended, because it is both faster and more
   accurate (decodes unicode escapes, etc). (John Arbash Meinel)
 
+* ``loader.load()`` now defaults to computing parents and collapsing
+  instance dicts. It does mean that loading will be a bit slower, and
+  consume more memory, but it is almost always what you need to do
+  first anyway. (John Arbash Meinel)
+
 
 Meliae 0.2.1rc1
 ###############
